[gd_scene load_steps=6 format=3 uid="uid://crw3tj6nhcoc5"]

[ext_resource type="Script" path="res://ui/main_menu/level_select/level_select.gd" id="1_w6sgo"]
[ext_resource type="Texture2D" uid="uid://c2603u0un53qj" path="res://ui/main_menu/level_select/assets/sprites/star-rating.png" id="2_hxcn0"]
[ext_resource type="Texture2D" uid="uid://cqrs0u1drwqqe" path="res://ui/main_menu/level_select/assets/sprites/level-previews.png" id="3_ghhk3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qvaqb"]
resource_local_to_scene = true
atlas = ExtResource("2_hxcn0")
region = Rect2(0, 0, 39, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofrb0"]
resource_local_to_scene = true
atlas = ExtResource("3_ghhk3")
region = Rect2(0, 0, 32, 32)

[node name="LevelSelect" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w6sgo")
title = "Title2"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Level 1"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DescriptionLabel" type="Label" parent="HBoxContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderSmall"
text = "An easy level to get you started. Don't think too hard about it"
autowrap_mode = 2

[node name="Spacer" type="Control" parent="HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HighScores" type="GridContainer" parent="HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="RatingLabel" type="Label" parent="HBoxContainer/VBoxContainer/VBoxContainer/HighScores"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Rating:"

[node name="Rating" type="TextureRect" parent="HBoxContainer/VBoxContainer/VBoxContainer/HighScores"]
layout_mode = 2
texture = SubResource("AtlasTexture_qvaqb")
stretch_mode = 4

[node name="BestSolveLabel" type="Label" parent="HBoxContainer/VBoxContainer/VBoxContainer/HighScores"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Best Solve:"

[node name="BestSolveScore" type="Label" parent="HBoxContainer/VBoxContainer/VBoxContainer/HighScores"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "N/A"

[node name="FastestSolveLabel" type="Label" parent="HBoxContainer/VBoxContainer/VBoxContainer/HighScores"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Fastest Solve:"

[node name="FastestSolveScore" type="Label" parent="HBoxContainer/VBoxContainer/VBoxContainer/HighScores"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "N/A"

[node name="PreviewImage" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
texture = SubResource("AtlasTexture_ofrb0")
stretch_mode = 4

[node name="Button" type="Button" parent="."]
layout_mode = 2
theme_type_variation = &"ClickablePanel"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
